Bug fixes. Messages will not stick out of the container anymore.

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -61,8 +61,8 @@ html, body {
     display: flex;
     flex-direction: column;
     flex-shrink: 0;
-    max-height: 500px;
     margin-bottom: 10px;
+    max-height: 100%;
     overflow: auto;
     padding-left: 5px;
     padding-right: 5px;
@@ -108,6 +108,8 @@ html, body {
     font-weight: 300;
     line-height: 150%;
     position: relative;
+    max-width: 50%;
+    overflow-wrap: break-word;
 }
 
 .chat-container li .chat-text:before {
@@ -119,6 +121,7 @@ html, body {
     left: -20px;
     border: 10px solid;
     border-color: transparent #ffffff transparent transparent;
+    max-width: 100%;
 }
 
 .chat-container li.chat-right > .chat-text {
